@@ -3,3 +3,11 @@ print(toCamelCase(s))  # helloWorld
 print(toCamelCase(s, capitalize=TRUE))  # HelloWorld
 stopifnot(toCamelCase(s) == toCamelCase(toCamelCase(s)))
 
+s <- "GEO Accession"
+print(toCamelCase(s))  # gEOAccession
+print(toCamelCase(s, preserveSameCase=TRUE))  # geoAccession
+print(toCamelCase(s, capitalize=TRUE))  # GEOAccession
+print(toCamelCase(s, capitalize=TRUE, preserveSameCase=TRUE))  # GEOAccession
+
+# Sanity checks
+stopifnot(toCamelCase(s) == toCamelCase(toCamelCase(s)))
