@@ -16,12 +16,14 @@
   Converts a string of words into a merged camel-cased word, e.g. "a single espresso" is converted to "aSingleEspresso".
 }
 
-\usage{\method{toCamelCase}{default}(s, capitalize=FALSE, split="[ 	]+", ...)}
+\usage{\method{toCamelCase}{default}(s, capitalize=FALSE, preserveSameCase=FALSE, split="[ 	]+", ...)}
 
 \arguments{
  \item{s}{A \code{\link[base]{character}} string.}
  \item{capitalize}{If \code{\link[base:logical]{TRUE}}, the first letter will be in upper case,
    otherwise it will be in lower case.}
+ \item{preserveSameCase}{If \code{\link[base:logical]{TRUE}}, words that are in all upper case
+   will remain as all same case words, e.g. acronyms.}
  \item{split}{A pattern used to identify words.  See \code{\link[base]{strsplit}}()
    for more details.}
  \item{...}{Not used.}
@@ -37,6 +39,14 @@ print(toCamelCase(s))  # helloWorld
 print(toCamelCase(s, capitalize=TRUE))  # HelloWorld
 stopifnot(toCamelCase(s) == toCamelCase(toCamelCase(s)))
 
+s <- "GEO Accession"
+print(toCamelCase(s))  # gEOAccession
+print(toCamelCase(s, preserveSameCase=TRUE))  # geoAccession
+print(toCamelCase(s, capitalize=TRUE))  # GEOAccession
+print(toCamelCase(s, capitalize=TRUE, preserveSameCase=TRUE))  # GEOAccession
+
+# Sanity checks
+stopifnot(toCamelCase(s) == toCamelCase(toCamelCase(s)))
 }
 
 \author{Henrik Bengtsson (\url{http://www.braju.com/R/})}
